# metal-matrix

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
benches/: bench.rs  kernel_benchmarks.rs
example/: main.rs
src/: lib.rs  main.rs  matrix.rs  metal_context.rs  operations.rs
src/kernels/: kernel.metal  matrix_add.metal  matrix_mul.metal  matrix_scalar_mul.metal  matrix_sub.metal  matrix_transpose.metal  mod.rs  vector_add.metal  vector_dot.metal
src/operations/: matrix_ops.rs  mod.rs  vector_ops.rs
