[package]
name = "metal-matrix"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mihir Wadekar <mw20000>"]
description = "High-performance linear algebra library with Metal GPU acceleration"
repository = "https://github.com/yourusername/metal-matrix"
documentation = "https://docs.rs/metal-matrix"
readme = "README.md"
keywords = ["metal", "gpu", "linear-algebra", "matrix", "macos"]
categories = ["mathematics", "hardware-support", "gpu"]
exclude = [".github/", "benches/", "example/"]

[dependencies]
metal = "0.31.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "example"
path = "example/main.rs"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]